<resources>
    <string name="app_name">CalculatorSeptember30</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_0">0</string>
    <string name="list_empty">List is empty</string>
    <string name="key_dot">.</string>
    <string name="long_text" translatable="false"><![CDATA[" <?xml version=\"1.0\" encoding=\"utf-8\"?> <GridLayout xmlns:android=\"http://schemas.android.com/apk/res/android\"     android:id=\"@+id/favorites_grid\"     android:layout_width=\"match_parent\"     android:layout_height=\"match_parent\"     android:background=\"#00ff00\"     android:rowCount=\"2\"     android:columnCount=\"2\">   <Button       android:text=\"Cell 0\"       android:layout_row=\"0\"       android:layout_column=\"0\"       android:textSize=\"14dip\" />   <Button       android:text=\"Cell 1\"       android:layout_row=\"0\"       android:layout_column=\"1\"       android:textSize=\"14dip\" />    <Button       android:text=\"Cell 2\"       android:layout_row=\"1\"       android:layout_column=\"0\"       android:textSize=\"14dip\" />   <Button       android:text=\"Cell 3\"       android:layout_row=\"1\"       android:layout_column=\"1\"       android:textSize=\"14dip\" /> </GridLayout> The problem is that my views do not stretch evenly for each row. This causes a lot of extra space to the right of my GridLayout.  I tried setting layout_gravity=\"fill_horizontal\" but that only applies to the last view on the row. This means Cell 1 stretches all the way to give enough space for Cell 0.  Thoughts on how to tackle this?  android android-layout android-gridview android-gridlayout Share Follow edited Nov 6 '13 at 14:44  mmBs 7,84766 gold badges3737 silver badges4343 bronze badges asked Apr 4 '12 at 17:33  dnkoutso 5,81144 gold badges3333 silver badges5757 bronze badges Why didn't you set specific layout_width and layout_height sizes on these Button elements? –  IgorGanapolsky  Jan 14 '14 at 17:21 Why not use TableLayout in your case? –  weaknespase  Oct 17 '14 at 12:16 1 In Lollipop we can now use the android.support.v7.widget.GridLayout, column count of 3, and then have a <TextView> <Space app:layout_columnWeight=\"1\"/> <TextView> per each colum to achieve the desired effect without all the extra overhead, unless you are building exclusively for SDK 21 and then you can use the normal GradLayout –  AllDayAmazing  Jan 22 '15 at 23:19 1 Better is to use linear layout with android:layout_width=\"0dp\" and android:layout_weight=\"1\". developer.android.com/guide/topics/ui/layout/… –  Gilboot  Jul 20 '20 at 7:55 Add a comment 23 Answers Не нашли ответ? Задайте вопрос на Stack Overflow на русском.   330  Starting in API 21 the notion of weight was added to GridLayout. To support older android devices, you can use the GridLayout from the v7 support library.  The following XML gives an example of how you can use weights to fill the screen width.  <?xml version=\"1.0\" encoding=\"utf-8\"?> <android.support.v7.widget.GridLayout     xmlns:android=\"http://schemas.android.com/apk/res/android\"     xmlns:grid=\"http://schemas.android.com/apk/res-auto\"      android:id=\"@+id/choice_grid\"     android:layout_width=\"fill_parent\"     android:layout_height=\"wrap_content\"     android:layout_centerHorizontal=\"true\"     android:padding=\"4dp\"      grid:alignmentMode=\"alignBounds\"     grid:columnCount=\"2\"     grid:rowOrderPreserved=\"false\"     grid:useDefaultMargins=\"true\">      <TextView         android:layout_width=\"0dp\"         android:layout_height=\"100dp\"         grid:layout_columnWeight=\"1\"         grid:layout_gravity=\"fill_horizontal\"         android:gravity=\"center\"         android:background=\"#FF33B5E5\"         android:text=\"Tile1\" />      <TextView         android:layout_width=\"0dp\"         android:layout_height=\"100dp\"         grid:layout_columnWeight=\"1\"         grid:layout_gravity=\"fill_horizontal\"         android:gravity=\"center\"         android:background=\"#FF33B5E5\"         android:text=\"Tile2\" />      <TextView         android:layout_width=\"0dp\"         android:layout_height=\"100dp\"         grid:layout_columnWeight=\"1\"         grid:layout_gravity=\"fill_horizontal\"         android:gravity=\"center\"         android:background=\"#FF33B5E5\"         android:text=\"Tile3\" />      <TextView         android:layout_width=\"0dp\"         android:layout_height=\"100dp\"         grid:layout_columnWeight=\"1\"         grid:layout_gravity=\"fill_horizontal\"         android:gravity=\"center\"         android:background=\"#FF33B5E5\"         android:text=\"Tile4\" />  </android.support.v7.widget.GridLayout> "]]></string>
    <string name="settings">Settings</string>
    <string name="increase">Up</string>
    <string name="key_plus">+</string>
    <string name="key_minus">-</string>
    <string name="key_mult">*</string>
    <string name="key_div">/</string>
    <string name="key_log">log</string>
    <string name="key_sqrt">Sqrt</string>
    <string name="key_pow">POW</string>
    <string name="key_percent">%</string>
    <string name="hint">Enter your name</string>
    <string name="theme_one">One</string>
    <string name="theme_two">Two</string>
    <string name="theme_three">Three</string>
    <string name="theme_four">Four</string>
    <string name="btn_settings">Settings</string>
    <string name="btn_terms_conditions"><![CDATA[Terms & Conditions]]></string>
</resources>