<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/key_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_1" />

    <Button
        android:id="@+id/key_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_2" />

    <Button
        android:id="@+id/key_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_3" />

    <Button
        android:id="@+id/key_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_4" />

    <Button
        android:id="@+id/key_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_5" />

    <Button
        android:id="@+id/key_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_6" />

    <Button
        android:id="@+id/key_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_7" />

    <Button
        android:id="@+id/key_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_8" />

    <Button
        android:id="@+id/key_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_9" />

    <Button
        android:id="@+id/key_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_0" />

    <Button
        android:id="@+id/key_dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_dot" />

</FrameLayout>